Another attempt to fix about me page background image on mobile

--- a/styles.css
+++ b/styles.css
@@ -238,12 +238,14 @@ body {
 
 
 .lower {
-    background: url("../pics/hike.jpg");
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 800px;
+    background-image:url("../pics/hike.jpg");
+background-position: center center;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+height: 100%; 
+overflow: hidden;
 }
 
 
@@ -281,10 +283,10 @@ body {
     height: 20%;
     width: 20%;
     display: inline-block;
-    float: right;
+    float: left;
     margin-top: 3%;
     margin-bottom: 5%;
-    margin-right: 10%;
+    margin-left: 17%;
 }
 
 
